--- a/templates/todos.html
+++ b/templates/todos.html
@@ -6,10 +6,14 @@
     <% for (var i=0; i < data.todos.length; i++) { %>
     <li id="todo_<%= data.todos[i].id %>">
         <label>
-            <input type="checkbox">
-            <%- data.todos[i].text %>
+            <input type="checkbox" <% if (data.todos[i].checked) { %>
+                disabled
+                checked
+            <% } %>
+            >
+            <span class="todo__text-js"><%- data.todos[i].text %></span>
         </label>
-        <span class="todo__delete-btn"></span>
+        <i class="todo__delete-js-btn material-icons">delete</i>
     </li>
     <% } %>
 </ul>
