--- a/templates/todos.html
+++ b/templates/todos.html
@@ -17,7 +17,7 @@
     <% } %>
     >
     <span class="todo__text todo__text-js"><%- data.todos[i].text %></span>
-    <i class="todo__delete-btn-js material-icons">delete</i>
+    <span class="todo__delete-btn-js">&times;</span>
     </li>
     <% } %>
 </ul>
